# packages/data-provider/src/routers/submissionRouter.ts
@@ -33,6 +33,14 @@ const router = ({
 		}).getSubmissionDetailsById,
 	);
 
+	router.get(
+		'/:submissionId/:actionType/:entityName',
+		submissionController({
+			baseDependencies,
+			authConfig,
+		}).getSubmissionRecords,
+	);
+
 	router.delete(
 		'/:submissionId',
 		submissionController({
